--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Hello Me</title>
+  <link rel="stylesheet" href="myStyle.css">
 </head>
 <body>
   <h1>Brian Muriithi (he/him)</h1>
