--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>Brian Muriithi (he/him)</h1>
-  <p>I am a third year CTD major from Aurora, CO.</p>
+  <p id="first">I am a third year CTD major from Aurora, CO.</p>
   <h2>What I like to do in my free time:</h2>
   <ul>
     <li>Outdoor stuff: running, biking, snowboarding</li>
@@ -15,6 +15,7 @@
   </ul>
   <h3>Goals for this class:</h3>
   <p>I want to leave this class with skills that I will be able to use in future classes and projects.</p>
+  <p>Click <a href="Week 2/encyclopedia.html" target="_blank">here</a> to find out more about Kenya.</p>
 </body>
 
 
