--- a/Week 6/index.html
+++ b/Week 6/index.html
@@ -8,12 +8,12 @@
   </head>
   <body>
     <section id="mountain">
-      <h1>Welcome to my site!</h1>
+      <h1 id="mtntext">Welcome to my site!</h1>
       <img src="mountain.jpg" alt="picture of a mountain" id= "mountainimg">
     </section>
 
     <section id="one">
-      <h2>This is my first Section</h2>
+      <h2>This is my <span id="first">first Section</span></h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </section>
@@ -26,8 +26,31 @@
 
     <section id="three">
       <h2>This section contains a button</h2>
-      <button>Click this button</button>
+      <button id="mybutton">Click this button</button>
+      <button id="mybutton2">Click this button</button>
     </section>
+
+    <!-- Javascript -->
+    <script> // Script should be at end of body section
+      console.log("javascript working");
+      document.getElementById("mybutton").addEventListener("click", buttonOne);
+      document.getElementById("mybutton2").addEventListener("click", buttonClicked);
+      document.getElementById("mountain").addEventListener("click", mountainClick);
+      function buttonClicked(){
+        alert("you pushed the second button!")
+        document.getElementById("mtntext").innerHTML = "You are not welcome!"
+      }
+
+      function mountainClick(){
+        alert("You clicked the mountain");
+      }
+
+      function buttonOne(){
+        alert("you pushed the button!");
+        document.getElementById("first").style.color = "red";
+        document.getElementById("three").style.backgroundColor = "skyblue";
+      }
+    </script>
 
   </body>
 </html>
