--- a/Week 6/hw/index.html
+++ b/Week 6/hw/index.html
@@ -18,7 +18,7 @@
     <p id="description">In Colorado, there are four seasons every that occur throughout each year. Each season has its own weather and distinct look.</p>
     <img src="seasons.jpg" alt="Seasons" id="picture">
 
-    <script type="text/javascript">
+    <script>
       console.log("javascript working");
       document.getElementById("summer").addEventListener("click", summerBtn)
       document.getElementById("fall").addEventListener("click", fallBtn)
