--- a/Midterm/index.html
+++ b/Midterm/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta>
+    <meta charset="utf-8">
     <title>Self-Care Menu</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pridi">
