--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Hello Me</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <link rel="stylesheet" href="myStyle.css">
-
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Reem+Kufi&display=swap" rel="stylesheet">
@@ -12,16 +12,29 @@
 <body>
   <h1>Brian Muriithi (he/him)</h1>
   <p id="first">I am a third year CTD major from Aurora, CO.</p>
-  <h2>What I like to do in my free time:</h2>
-  <ul>
-    <li>Outdoor stuff: running, biking, snowboarding</li>
-    <li>Interacting with the Kenyan community in Colorado</li>
-    <li>Spending time with friends</li>
-  </ul>
-  <h3>Goals for this class:</h3>
-  <p>I want to leave this class with skills that I will be able to use in future classes and projects.</p>
-  <p>Click<a href="Week2/encyclopedia.html" target="_blank">here</a> to find out more about Kenya.</p>
-</body>
 
+  <section id="info">
+    <section id="freetime">
+      <h2>What I like to do in my free time:</h2>
+      <ul>
+        <li>Outdoor stuff: running, biking, snowboarding</li>
+        <li>Interacting with the Kenyan community in Colorado</li>
+        <li>Spending time with friends</li>
+      </ul>
+    </section>
+    <img id="outdoors" src="outdoors.jpg" alt="Several outdoor activities">
+
+    <section id="goals">
+      <h3>Goals for this class:</h3>
+      <p>I want to leave this class with skills that I will be able to use in future classes and projects.</p>
+    </section>
+    <img id="skills" src="skills.jpg" alt="ideas in a head">
+
+    <section id="kenya">
+      <p>Click<a href="Week2/encyclopedia.html" target="_blank">here</a> to find out more about Kenya.</p>
+    </section>
+    <img id="kenyaPic" src="kenya.jpg" alt="Picture of a map of Kenya">
+  </section>
+</body>
 
 </html>
